Benchmarking cuckoo filter and PD based filter. Added benchmark for storing a multiset.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,6 @@ add_executable(Filter_Comparison
 
         Shared_files/MurmurHash3.h Shared_files/MurmurHash3.cpp
         #        main.cpp Comparing/benchmarking_filters.cpp Comparing/benchmarking_filters.hpp Comparing/b_helpers.cpp Comparing/b_helpers.hpp)
-        Comparing/benchmark_integer.cpp Comparing/benchmark_integer.hpp)
+        Comparing/benchmark_integer.cpp Comparing/benchmark_integer.hpp Comparing/benchmarking_cuckoo_filter.cpp Comparing/benchmarking_cuckoo_filter.hpp Comparing/benchmark_using_multisets.cpp Comparing/benchmark_using_multisets.hpp)
 
 #target_link_libraries(Clion_Code cuckoofilter)
