Adding validation tests in tests.hpp, and benchmarking test in new_tests.hpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,26 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.14)
 project(Filters)
 
 set(CMAKE_CXX_STANDARD 14)
 SET(CMAKE_CXX_FLAGS "-O3")
 SET(CMAKE_C_FLAGS "-O3")
+#
+#SET(CMAKE_CXX_FLAGS "-O0")
+#SET(CMAKE_C_FLAGS "-O0")
+
+#SET(CMAKE_CXX_FLAGS "-O3 -fno-strict-aliasing -march=native")
+#SET(CMAKE_C_FLAGS "-O3 -fno-strict-aliasing -march=native")
+
+#SET(CMAKE_CXX_FLAGS "-O3 -fno-strict-aliasing -mavx2")
+#SET(CMAKE_C_FLAGS "-O3 -fno-strict-aliasing -mavx2")
+
+#SET(CMAKE_CXX_FLAGS "-O0 -g -ggdb")
+#SET(CMAKE_C_FLAGS "-O0 -g -ggdb")
+
+
+#SET(CMAKE_CXX_FLAGS  "-g -ggdb")
+#SET(CMAKE_C_FLAGS "-g -ggdb")
+
 
 #include_directories(.)
 include_directories(Bloom_Filter)
@@ -19,6 +36,7 @@ add_executable(
         hashutil.h
         Tests/wrappers.hpp
         Tests/tests.hpp Tests/tests.cpp
+        Tests/new_tests.hpp Tests/new_tests.cpp
         Bloom_Filter/counting_bloom.h
         Bloom_Filter/simd-block.h
         Bloom_Filter/simd-block-fixed-fpp.h
@@ -28,21 +46,21 @@ add_executable(
         PD_Filter/hash_table.hpp PD_Filter/hash_table.cpp
         PD_Filter/dict.hpp
         PD_Filter/macros.h
-#        main.cpp
+        #        main.cpp
 
-#        morton/hash_util.h
-#        morton/block.h
-#        morton/bf.h
-#        morton/block.h
-#        morton/compressed_cuckoo_config.h
-#        morton/compressed_cuckoo_filter.h
-#        morton/fixed_point.h
-#        morton/morton_filter.h
-#        morton/morton_sample_configs.h
-#        morton/morton_util.h
-#        morton/test_util.h
-#        morton/util.h
-#        morton/vector_types.h
- )
+        #        morton/hash_util.h
+        #        morton/block.h
+        #        morton/bf.h
+        #        morton/block.h
+        #        morton/compressed_cuckoo_config.h
+        #        morton/compressed_cuckoo_filter.h
+        #        morton/fixed_point.h
+        #        morton/morton_filter.h
+        #        morton/morton_sample_configs.h
+        #        morton/morton_util.h
+        #        morton/test_util.h
+        #        morton/util.h
+        #        morton/vector_types.h
+        Tests/new_tests.cpp Tests/new_tests.hpp)
 
 target_link_libraries(Filters OpenSSL::SSL)
