Using the original cuckoofilter code. (directory cuckoofilter instead of cuckoo).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.14)
 project(Filters)
 
 set(CMAKE_CXX_STANDARD 14)
-SET(CMAKE_CXX_FLAGS "-O3")
-SET(CMAKE_C_FLAGS "-O3")
+#SET(CMAKE_CXX_FLAGS "-O3")
+SET(CMAKE_CXX_FLAGS "-O3 -march=native")
+#SET(CMAKE_C_FLAGS "-O3")
 #
 #SET(CMAKE_CXX_FLAGS "-O0")
 #SET(CMAKE_C_FLAGS "-O0")
@@ -28,6 +29,7 @@ include_directories(PD_Filter)
 include_directories(Tests)
 include_directories(morton)
 include_directories(xorfilter)
+include_directories(cuckoofilter)
 
 find_package(OpenSSL REQUIRED)
 
@@ -37,6 +39,7 @@ add_executable(
         Tests/wrappers.hpp
         Tests/tests.hpp Tests/tests.cpp
         Tests/new_tests.hpp Tests/new_tests.cpp
+        Tests/printutil.cpp Tests/printutil.hpp
         Bloom_Filter/counting_bloom.h
         Bloom_Filter/simd-block.h
         Bloom_Filter/simd-block-fixed-fpp.h
@@ -46,8 +49,8 @@ add_executable(
         PD_Filter/hash_table.hpp PD_Filter/hash_table.cpp
         PD_Filter/dict.hpp
         PD_Filter/macros.h
-        #        main.cpp
 
+        #        main.cpp
         #        morton/hash_util.h
         #        morton/block.h
         #        morton/bf.h
@@ -61,6 +64,6 @@ add_executable(
         #        morton/test_util.h
         #        morton/util.h
         #        morton/vector_types.h
-        Tests/new_tests.cpp Tests/new_tests.hpp)
+)
 
 target_link_libraries(Filters OpenSSL::SSL)
