--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,12 @@ cmake_minimum_required(VERSION 3.14)
 project(Filters)
 
 set(CMAKE_CXX_STANDARD 14)
+#
+#SET(CMAKE_CXX_FLAGS "-O3 -march=native")
+SET(CMAKE_CXX_FLAGS "-O0 -march=native")
+#
+
 #SET(CMAKE_CXX_FLAGS "-O3")
-SET(CMAKE_CXX_FLAGS "-O3 -march=native")
 #SET(CMAKE_C_FLAGS "-O3")
 #
 #SET(CMAKE_CXX_FLAGS "-O0")
