--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 project(Filters)
 
 set(CMAKE_CXX_STANDARD 14)
-#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
 #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -O3")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -DNDEBUG -O3")
 #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mbmi2 -DNDEBUG")
@@ -48,6 +48,7 @@ add_executable(
         #        morton/test_util.h
         #        morton/util.h
         #        morton/vector_types.h
-        PD_Filter/TPD.hpp)
+        TPD_Filter/TPD.hpp
+        TPD_Filter/T_dict.hpp TPD_Filter/att_hTable.hpp)
 
 target_link_libraries(Filters OpenSSL::SSL)
