--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,16 @@ cmake_minimum_required(VERSION 3.10)
 project(Comparing_Filters_Simpler)
 
 set(CMAKE_CXX_STANDARD 14)
-# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512bw")
-# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512vbmi")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -faligned-new")
-# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=skylake-avx512")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -mbmi -mbmi2")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mlzcnt")
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512")
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512vbmi")
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=skylake-avx512")
 # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
 
 include_directories(Bloom_Filter)
