Moving to CLion on server. to solve include error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512bw")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -faligned-new")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -mbmi -mbmi2")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mlzcnt")
- SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+#  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb")
 #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
 # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512")
 # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512vbmi")
 # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=skylake-avx512")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
+# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
 
 include_directories(Bloom_Filter)
 include_directories(PD_Filter)
