Adding Dict320, and more specifically, adding pd320. pd320 is an implementation of pd (type __m512i) That contain at most 32 elements, with quotients in range [0,31), and remainder of length 8 bits. The main motivation behind this implementation, is making the pd header size small enough to fit inside one word. We hoped thid would make the rank and select operation faster, which it did, and also prevented the slow-down in higher load, for positive lookups. Also implemented an alternative way to compte the rank and select, which uses PDEP only once. This implementation seems faster by about 8%.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ heaptracks/xxhash.h
 xxhash.h
 heaptracks/
 Terminal_history
+PD_Filter/Dict320/Dict512_Ver2.hpp
+PD_Filter/Dict320/Dict512_With_CF.hpp
+PD_Filter/Dict320/pd320_old.cpp
+PD_Filter/Dict320/pd320_old.hpp
