First Working Dict512_Ver3. This class passes element to the second level by thier value, and not by their arrival time.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ PD_Filter/Dict320/pd320_old.hpp
 # PD_Filter/Dict320/pd320_v2.cpp
 # PD_Filter/Dict320/pd320_v2.hppBuilt_and_Run_valid_test.sh
 Built_and_Run_bench.sh
+PD_Filter/HashTables/hashTable64.hpp
