Adding pd512_plus working but not efficient due to heavy debugging.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ PD_Filter/Dict320/pd320_old.hpp
 # PD_Filter/Dict320/pd320_v2.hppBuilt_and_Run_valid_test.sh
 Built_and_Run_bench.sh
 PD_Filter/HashTables/hashTable64.hpp
+PD_Filter/Dict512/pd512_plus_old.cpp
+PD_Filter/Dict512/pd512_plus_old.hpp
