Adding pd256_plus. We hoped using smaller header, will improve the performances. Currently (early stage), it does not seems to effect the performances. different variants of the lookup function should be considered based.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ perf-diff.txt
 perf.data
 perf.data.old
 temp.txt
+
+l1_minimal_search_v25.txt
+cmake-build-debug
+PD_Filter/Dict512/Comparing-searches.txt
